# D2DAP

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
backend/: README.md  __init__.py  demo_phase2.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/attacks/: __init__.py
backend/app/authentication/: __init__.py  auth_manager.py  authenticator.py  challenge.py  crypto.py  exceptions.py  models.py  nonce.py  registration.py  session.py  session_key.py
backend/app/communication/: __init__.py  communication_manager.py
backend/app/config/: __init__.py  settings.py
backend/app/core/: __init__.py  exceptions.py  logging.py  message.py
backend/app/database/: __init__.py
backend/app/drones/: __init__.py  drone_model.py
backend/app/feature_extraction/: __init__.py
backend/app/ids/: __init__.py
backend/app/network/: __init__.py  simulation_network.py
backend/app/policy/: __init__.py
backend/app/simulator/: __init__.py
backend/app/trust/: __init__.py
backend/app/utils/: __init__.py  logger.py
backend/tests/: test_phase1.py  test_phase2.py
backend/tests/unit/: test_health.py
datasets/: README.md
docs/architecture/: README.md
docs/diagrams/: README.md
docs/references/: README.md
docs/sprint-plans/: README.md
